2006-05-05  Edward Hervey  <edward@fluendo.com>

	* gnl/Makefile.am:
	* gnl/gnlfilesource.c:
	* gnl/gnlmarshal.list:
	* gnl/gnlobject.c:
	* gnl/gnloperation.c:
	* gnl/gnlsource.c:
	Remove gnlmarshal cruft that dates from... well....
	Ok, fine, that was here since 0.8 era and not used since :)

2006-05-05  Edward Hervey  <edward@fluendo.com>

	* common/check.mak:
	* configure.ac:
	* gnl/Makefile.am:
	* gnl/gnlfilesource.c: (hack_fakesink_new), (hack_fakesink_free),
	(find_hack_fakesink), (decodebin_new_pad_cb),
	(decodebin_pad_removed_cb), (gnl_filesource_dispose),
	(gnl_filesource_prepare), (gnl_filesource_send_event):
	* gnl/gnlmarshal.list:
	* tests/Makefile.am:

2006-05-05  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_dispose),
	(lock_child_state), (gnl_composition_reset), (get_new_seek_event),
	(gnl_composition_change_state), (no_more_pads_object_cb),
	(update_pipeline):
	If srcpad of top gnlobject is not available, store pending child seek so
	we can send it when the pad appears.
	Lock all childs in READY. They will be automatically (un)locked in
	update_pipeline()
	Add GST_SEEK_FLAG_ACCURATE to the seek event.
	* gnl/gnlobject.c: (translate_incoming_seek),
	(gnl_object_change_state):
	Add GST_SEEK_FLAG_ACCURATE to incoming seek events if it wasn't already
	there.
	GnlObject::update() virtual method is called in READY->PAUSED before
	calling the parent _change_state()
	* gnl/gnlsource.c: (gnl_source_class_init), (gnl_source_prepare),
	(element_pad_removed_cb), (ghost_seek_pad), (pad_blocked_cb),
	(pad_event_probe), (gnl_source_add_element),
	(gnl_source_change_state):
	We need to block on events. Added an event_probe for that.
	Implement GnlObject::prepare() so we can create a seek event if the
	GnlSource is used stand-alone (not in composition).
	* tests/check/Makefile.am:
	* tests/check/gnlsource.c: (gst_element_factory_make_or_warn),
	(gnlsource_pad_added_cb), (compare_segments),